# AzPolicyAlias

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
docs/: developer.md
k8s/: helmrelease.yaml  secret.sops.yaml
src/: __init__.py  azure_service.py  main.py
src/static/: index.html  script.js  style.css
tests/: test_api.py
