[project]
name = "azpolicyalias"
version = "0.1.0"
description = "Fast, searchable viewer for Azure Policy aliases"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.40.0",
    "azure-mgmt-resource==24.0.0",
    "azure-identity==1.25.1",
    "pydantic==2.12.5",
    "aiofiles==25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
