[project]
name = "azpolicyalias"
version = "0.1.0"
description = "Fast, searchable viewer for Azure Policy aliases"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "azure-mgmt-resource==25.0.0",
    "azure-identity==1.25.3",
    "pydantic==2.12.5",
    "aiofiles==25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "RUF",       # ruff-specific
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.isort]
known-first-party = ["azure_service"]
